--- a/Jet2ArticalAssignment/app/build.gradle
+++ b/Jet2ArticalAssignment/app/build.gradle
@@ -53,4 +53,6 @@ dependencies {
 
     implementation "androidx.recyclerview:recyclerview:1.1.0"
     implementation 'android.arch.lifecycle:extensions:1.1.1'
+
+    implementation 'org.greenrobot:eventbus:3.2.0'
 }
