--- a/Jet2ArticalAssignment/app/src/main/AndroidManifest.xml
+++ b/Jet2ArticalAssignment/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.article.ArticleListActivity" android:label="@string/articles">
+        <activity
+            android:name=".view.activity.ArticleListActivity"
+            android:label="@string/articles">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
